--- a/apps/bookstack.yml
+++ b/apps/bookstack.yml
@@ -19,11 +19,11 @@
         db_image: 'linuxserver/mariadb'
 
     # CORE (MANDATORY) ############################################################
-    - name: 'Including cron job'
-      include_tasks: '/opt/coreapps/apps/_core.yml'
+    # - name: 'Including cron job'
+    #   include_tasks: '/opt/coreapps/apps/_core.yml'
 
-    - name: 'Including plugins '
-      include_tasks: '/opt/coreapps/apps/_plugins.yml'
+    # - name: 'Including plugins '
+    #   include_tasks: '/opt/coreapps/apps/_plugins.yml'
 
     - name: 'Checking for existing app data'
       stat:
